--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glowing Button</title><link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/x-icon" href="PANDA_CREATION-removebg-preview">
+    <link rel="stylesheet" href="./style.css">
+    <title>Glowing Button</title>
 
 </head>
 <body>
