--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="x-icon" href="PANDA_CREATION-removebg-preview">
     <link rel="stylesheet" href="./style.css">
-    <title>Glowing Button</title>
+    <title>Hover Animation | Coding With Panda</title>
 
 </head>
 <body>
@@ -13,9 +13,9 @@
 
 <div class="container">
     <section>
-        <h2 class="btn btn__sass">Sass</h2>
-        <h2 class="btn btn__html">HTML5</h2>
-        <h2 class="btn btn__css">CSS3</h2>
+        <h2 class="btn btn__sass">HTML</h2>
+        <h2 class="btn btn__html">CSS</h2>
+        <h2 class="btn btn__css">JS</h2>
     </section>
 </div>
 
